@@ -644,6 +644,16 @@ float Mode::process(int index, int subloopindex)  //frac sample error is in micr
   int indices[10];
   bool looff, isfraclooffset;
   //cout << "For Mode of datastream " << datastreamindex << ", index " << index << ", validflags is " << validflags[index/FLAGS_PER_INT] << ", after shift you get " << ((validflags[index/FLAGS_PER_INT] >> (index%FLAGS_PER_INT)) & 0x01) << endl;
+
+  //since these data weights can be retreived after this processing ends, reset them to a default of zero in case they don't get updated
+  dataweight = 0.0;
+  if(perbandweights)
+  {
+    for(int b = 0; b < numrecordedbands; ++b)
+    {
+      perbandweights[b] = 0.0;
+    }
+  }
   
   if((datalengthbytes <= 1) || (offsetseconds == INVALID_SUBINT) || (((validflags[index/FLAGS_PER_INT] >> (index%FLAGS_PER_INT)) & 0x01) == 0))
   {
